# morphsnakes

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.rst  circle.yml  examples.py  morphsnakes.py  morphsnakes_v1.py  mysnakes  requirements.txt  setup.py  test_morphsnakes.py  tests.py
include/: morphsnakes.h  ndimage.h
include/morphsnakes/: morphsnakes.h  narrowband.h  ndimage.h
morphsnakes/: __init__.py  cmorphsnakes.py  morphsnakes.py  multi_snakes.py
morphsnakes/include/: morphsnakes.h  ndimage.h  numpy_wrapper.h  pyarray_symbol.h  pyarraymodule.h
morphsnakes/src/: _morphsnakes.pyx  numpy_wrapper.h
notebooks/: sample_islets.ipynb  sample_lakes.ipynb
testimages/: confocal.npy
tests/: test1.cpp  test_cython.py  test_python.py  tests.cpp  tests.py  tests_cython.py
